--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,6 @@
 <resources>
     <string name="app_name">TestVKClient</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_login">Log in</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_logout">Выйти</string>
+    <string name="title_newsfeed">НОВОСТИ</string>
 </resources>
